golodex_ui/kubernetes/03-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "golodex-ui"
  namespace: "golodex"
  labels:
    app.kubernetes.io/name: "golodex-ui"
    app.kubernetes.io/managed-by: "eangeli"
    app.kubernetes.io/version: "1.0-beta"
    app.kubernetes.io/component: "db-api"
    app.kubernetes.io/part-of: "golodex"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: "golodex-ui"
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: "golodex-ui"
        app.kubernetes.io/name: "golodex-ui"
        app.kubernetes.io/managed-by: "eangeli"
        app.kubernetes.io/version: "1.0-beta"
        app.kubernetes.io/component: "db-api"
        app.kubernetes.io/part-of: "golodex"
    spec:
      serviceAccountName: "golodex-ui"
      containers:
      - name: app
        image: localhost:32000/golodex-ui:dev
        imagePullPolicy: "Always"
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /health
            port: 80
          initialDelaySeconds: 60
          periodSeconds: 10
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /readiness
            port: 80
          initialDelaySeconds: 1
          periodSeconds: 10
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 60
